--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cops",
   "version": "0.1.0",
   "private": true,
+  "homepagge:"https://evebarel.github.io/reports/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
